a bit too much on indiv resosn

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -381,13 +381,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2010},
   publisher={Springer}
 }
-@article{johnson2003introduction,
-  title={Introduction to photonic crystals: Bloch’s theorem, band diagrams, and gaps (but no defects)},
-  author={Johnson, Steven G and Joannopoulos, John D},
-  journal={Photonic Crystal Tutorial},
-  pages={1--16},
-  year={2003}
-}
 @article{ashcroft2005solid,
   title={Solid State Physics (Holt, Rinehart and Winston, New York, 1976)},
   author={Ashcroft, Neil W and Mermin, N David},
@@ -751,6 +744,32 @@ j%% TODO understand what this is about
   year={2009},
   publisher={APS}
 }
+@article{felbacq2005theory,
+  title={Theory of mesoscopic magnetism in photonic crystals},
+  author={Felbacq, Didier and Bouchitt{\'e}, Guy},
+  journal={Physical review letters},
+  volume={94},
+  number={18},
+  pages={183902},
+  year={2005},
+  publisher={APS}
+}
+@article{merlin2009metamaterials,
+  title={Metamaterials and the Landau--Lifshitz permeability argument: large permittivity begets high-frequency magnetism},
+  author={Merlin, Roberto},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={6},
+  pages={1693--1698},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+
+
+
+
+
+
 ## TODO new thing, they seem not to have true individual behaviour
 @article{yang2015,
   title={Terahertz magnetic and electric Mie resonances of an all-dielectric one-dimensional grating},
