--- a/result.tex
+++ b/result.tex
@@ -2,8 +2,9 @@
 
 \paragraph{Antiresonances and problems with local effective parameters}
 %% TODO add to the first Mie resonance discussed
-\add{Anti-resonant response of resonant inclusions \cite{wallen2010}: "antiresonance "may not" come from periodicity, as it is also observed in random structures";
-Restoring the physical meaning of MM cosstitutive parameters \cite{alu2010}}
+\add{Anti-resonant response of resonant inclusions : "antiresonance "may not" come from periodicity, as it is also observed in random structures"; %% \cite{wallen2010}
+Restoring the physical meaning of MM cosstitutive parameters %%  \cite{alu2010}
+}
 
 
 \section{Dielectric slab} % references to ->%{{{
