--- a/theory.tex
+++ b/theory.tex
@@ -1034,7 +1034,7 @@ Other resonances have no dipole, again due to the symmetry. Their interaction wi
 
 %}}}
 \paragraph{Bragg band-gaps}%{{{
-
+A different class of band-gaps is formed 
 %  \cite{johnson2003introduction}
 %  Electromagnetic wave propagation in periodic media was first studied by
 %  Lord Rayleigh in 1887, in connection with the peculiar reflective properties of a
@@ -1062,6 +1062,11 @@ photonic band-gaps are new compared to the band gaps arising from permittivity/p
 %}}}
 \paragraph{Other types of band-gaps}%{{{
 zero-average-index band gaps?
+
+%}}}
+\paragraph{Overview of band-gap mechanisms}%{{{
+% individual band-gaps -- indirect bands,  Bragg band-gaps -- direct bands, 
+% individual band-gaps in periodic structures are always affected by the half-wave resonating bteween the cells
 
 %}}}
 
