--- a/theory.tex
+++ b/theory.tex
@@ -4,7 +4,7 @@
 %% *  get rid of the term "response function" for susceptibility
 %% *  ensure more consistent usage of "dispersion curve", "dispersion relation" and "solution of Maxwell equations"
 
-\section{Electrodynamics of continuous media} 
+\section{Electrodynamics of local homogeneous media} 
 \subsection{Electromagnetic wave in vacuum}
 \paragraph{Maxwell equations}  %{{{
 In the realm of classical physics, the electromagnetic phenomena are governed by the \textit{Maxwell equations} in the following form.
@@ -432,6 +432,7 @@ Whenever the wave vector $\KK$ is nearly perpendicular to the isofrequency conto
 
 %}}}
 
+\section{Electrodynamics of nonlocal homogeneous media} 
 \subsection{Nonlocal response} 
 \paragraph{Definition of nonlocal media}%{{{
 %TODO: spatial dispersion describes one specific sort of nonlocal behaviour that exists in homogeneous infinite media only
@@ -1033,7 +1034,7 @@ Other resonances have no dipole, again due to the symmetry. Their interaction wi
 %% TODO how much should be "predicted" here, and nhow much should be left for the Results section?
 
 %}}}
-\paragraph{Bragg band-gaps}%{{{
+\paragraph{Bragg band-gaps}%{{{ TODO
 A different class of band-gaps is formed 
 %  \cite{johnson2003introduction}
 %  Electromagnetic wave propagation in periodic media was first studied by
@@ -1070,40 +1071,87 @@ zero-average-index band gaps?
 
 %}}}
 
-\subsection{Metamaterials and homogenization}
-\paragraph{todo}%{{{
-Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
+\section{Metamaterials and photonic crystals}
+\subsection{Definitions} 
+%% Definitions:
+%% note that Veselago68 speaks about a truly *homogeneous* medium
+% -> cloaking (aside from losses)
+% -> superlens (aside from losses and aberration, in a hypothetical case that the MM structure can be made much finer than a detector ...)
+% -> hyperlens 
+%    The resolution of metamaterials is hindered by their internal cell size, and even sooner, by the spatial dispersion.
+%    Hyperbolic metamaterials are commonly thought to be able to form a hyperlens, but the hyperbolic shape of the IFC is only an approximation
+%    for low wavenumber; it possibly strongly differs when K~is big, and possibly also forms a closed surface instead of infinite hyperboloids.
+% -> metasurfaces (impedance engineering, tunable properties, thin high-contrast filters)
+% Losses are in \cite[p. 708]{born1999book}
+% phc, mm, "electromagnetic materials"
 
-Effective parameters
+\subsection{Historical notes} 
+of designing and investigating periodic structures
+% == History ==    artificial dielectrics, which were already designed in the 1940s for microwave frequencies -- J. Brown, “Artificial dielectrics,” Prog. Dielectr. 2, 193–225 (1960)
 
-ref Homogenisation issues - response to our paper from OpEx
-\cite{rockstuhl2008transition}
-\cite{paul2011reflection}
-\cite{andryieuski2012bloch}
-\cite{andryieuski2010homogenization} 
-\cite{simovski2007bloch}
-\cite{simovski2009material}
-\cite{simovski2011electromagnetic}
-\cite{mortensen2010unambiguous}
-% todo{Elaborate mathematical treatise on this topic: \cite{sjoberg2005floquet}}
-% A Floquet-Bloch decomposition of Maxwell's equations, applied to homogenization " The behavior of the solutions of a PDE with rapidly oscil-
-%   lating coefficients, considered over distances large compared to the oscillations, is in several respects similar to the solutions of a PDE with slowly varying coefficients.
-%   The problem of homogenization is to find these slowly varying coefficients by an ap- propriate limit process of the rapidly oscillating ones"
+\subsection{Application of metamaterials} 
+%Ref. \cite{zheludev2010road} identifies major points of metamaterial research in reaching chirality, negative index of refraction, artificial magnetism, unusually low or high permittivity, building transformation optics e.g. for electromagnetic cloaking, engineering dispersion, sensor MMs, switchable MMs, amplifying MMs, enhanced nonlinearity, and quantum effects.
+\paragraph{Imaging beyond the diffraction limit }%{{{
+- 
 
-%% todo "process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
-%% form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
-%% magnetic theory, to the Lorentz-Lorenz and Maxwell-Garnet effective medium models [1–3]
-%			[1] J. C. M. Garnett, Phil Trans. R. Soc. A 203, 385 (1904).
-%			[2] D. E. Aspnes, Thin Solid Films 89, 249 (1982).
-%			[3] W. Cai and V. Shalaev, Optical Metamaterials: Fundamentals and Applications (Springer, New York, 2010).
+\mdf{
+\textit{Superlensing -- amplification of evanescent waves}
+\textit{Hyperlensing -- coupling of evanescent and radiated waves} 
+hyperbolic media, analogy with optical fibers, graphene nanostructures...
+}
 
-%% Many MMs do not bring negative refraction, other (composites) do, but not by means of resonances: 
-%% The tunable negative permittivity and negative permeability of percolative Fe/Al2O3 composites in radio frequency range with
-%% Negative index may arise from resonances
+To achieve the desired high resolution, the medium has to maintain  \todo{+}
+
+If a metamaterial is used as the medium, this obviously translates into the unit cells being \textit{finer} than the finest details to be imaged. The requirement is in fact much stricter, as also the spatial dispersion has to be negligible for the waves the desired resolution, which could be achieved either with sophisticated engineering of the dispersion, or with massive reduction of the unit cell size, so that all wave vectors are near the center of Brillouin zone. % refer to some Fig. of the PHC BZ
+
+Aside from spatial dispersion, a great challenge are the dissipative losses. If the wave components with high spatial frequency are to be resolved, they also may not be significantly damped. This is essential for the evanescent-wave amplification, where small energy flow-through and simultaneous high energy concentration require extremely low losses. In contrast, down-scaling the unit cells inherently requires higher energy localisation, and this is usually at the expense of the losses growing.
+
+To the author's knowledge, all demonstrations of metamaterial sub-wavelength imaging demonstrated so far were either limited to the easily accessible microwave % todo cite, and verify there is nothing interesting in the IR lately
+region, or were barely working experimental devices, often requiring .
+
+The question remains whether the significant progress of technology required to fabricate suitable deeply sub-wavelength structures does not simultaneously allow much better imaging with detectors placed in the near-field.
+%}}}
+\paragraph{Electromagnetic cloaking}%{{{
+
+-
+
+\mdf{
+Transformation optics
+Static-field cloaking/shielding of magnetic field
+Full cloaks and carpet cloaks
+}
+
+A simplified task is to construct the \textit{carpet cloak}, a hollow structure adjacent to a boundary that conceals an obstacle near the boundary. Note however, that a carpet cloak can be constructed of homogeneous, anisotropic dielectrics.
+
+In the author's opinion, a great conceptual breakthrough would be needed to overcome the band-width limitations and losses that prevent from building any usable electromagnetic cloak. 
+
+%}}}
+\paragraph{Metamaterials and sensing}%{{{
+%% + TODO Negative Casimir force
+%% http://journals.aps.org/prl/abstract/10.1103/PhysRevLett.105.189301
+
+%}}}
+\paragraph{Metasurfaces, compact antennas and impedance engineering}%{{{
 
 %}}}
 
-\subsection{What are metamaterials and photonic crystals?} 
+\subsection{Application of photonic crystals} 
+\paragraph{One-dimensional structures}%{{{
+
+%}}}
+\paragraph{Planar photonic band-gap structures}%{{{
+\textit{Photonic-crystal waveguides in integrated optics}
+
+%}}}
+\paragraph{Photonic filters}%{{{
+
+%}}}
+\paragraph{High field concentration}
+Magnetized PhCs with enhanced magneto-optic interaction for one-dimensional light propagation
+
+%}}}
+
+\subsection{The boundary between metamaterials and photonic crystals} 
 \paragraph{Difference in the Bloch wavelength}%{{{
 Both the metamaterial (MM) and photonic crystal (PhC) concepts are inspired by solid-state physics, namely by theories of waves propagating in solids. The fundamental difference between these is historical - metamaterials are related to \textit{optical waves} propagating in the quasi-homogeneous crystal lattice, whereas the theory of photonic crystals was developed on the basis of \textit{electron waves} in the crystal lattice. The difference between electrons in solids and optical photons is in that the electron wavelength is similar to the inter-atomic distance ($\approx 10^{-10}$ m), demanding the use of the Bloch theorem, whereas the wavelength of light is four order of magnitude larger and the medium.
 %are in the scale (inter-atomic distances are in the order of $10^{-10}$ m, while in electromagnetic structures, the cell dimensions usually range from $10^{-2}$ to $10^{-7}$ m. 
@@ -1148,8 +1196,6 @@ The desired properties of nonresonant structures are obtained by averaging the p
 		resonant metamaterials operate in the 2nd BZ (or possibly even third or higher? )
 		Think over, note our paper dominec2014transition \cite{dominec2014transition}
 }
-
-%}}}
 \paragraph{Difference in the energy localisation}%{{{
 ... and resistance of the behaviour to the disorder
 
@@ -1164,7 +1210,7 @@ At the resonant frequencies in the metamaterials, the majority of the energy of 
 
 \todo{If so, would be MMs a very narrow, or very broad  group of structures?}
 %}}}
-\paragraph{Definition by purpose and way of thinking}%{{{
+\paragraph{Difference in purpose and way of thinking}%{{{
 
 existence of effective parameters
 
@@ -1174,20 +1220,40 @@ existence of effective parameters
 
 PK: "The word “metamaterial” (MM) appeared first in the paper by Smith et al. in 2000 [6] where a structured material" -- is it true?
 %}}}
-%% Definitions:
-%% note that Veselago68 speaks about a truly *homogeneous* medium
-% -> cloaking (aside from losses)
-% -> superlens (aside from losses and aberration, in a hypothetical case that the MM structure can be made much finer than a detector ...)
-% -> hyperlens 
-%    The resolution of metamaterials is hindered by their internal cell size, and even sooner, by the spatial dispersion.
-%    Hyperbolic metamaterials are commonly thought to be able to form a hyperlens, but the hyperbolic shape of the IFC is only an approximation
-%    for low wavenumber; it possibly strongly differs when K~is big, and possibly also forms a closed surface instead of infinite hyperboloids.
-% -> metasurfaces (impedance engineering, tunable properties, thin high-contrast filters)
-% Losses are in \cite[p. 708]{born1999book}
+\subsection{Metamaterial homogenization} % note that NRW and CDH are discussed later
+\paragraph{todo}%{{{
+Homogenization is not a search for an existing truth, but rather a somewhat arbitrary decision.
 
+Effective parameters
 
+ref Homogenisation issues - response to our paper from OpEx
+\cite{rockstuhl2008transition}
+\cite{paul2011reflection}
+\cite{andryieuski2012bloch}
+\cite{andryieuski2010homogenization} 
+\cite{simovski2007bloch}
+\cite{simovski2009material}
+\cite{simovski2011electromagnetic}
+\cite{mortensen2010unambiguous}
+% todo{Elaborate mathematical treatise on this topic: \cite{sjoberg2005floquet}}
+% A Floquet-Bloch decomposition of Maxwell's equations, applied to homogenization " The behavior of the solutions of a PDE with rapidly oscil-
+%   lating coefficients, considered over distances large compared to the oscillations, is in several respects similar to the solutions of a PDE with slowly varying coefficients.
+%   The problem of homogenization is to find these slowly varying coefficients by an ap- propriate limit process of the rapidly oscillating ones"
 
-%% TODO 
+%% todo "process of replacing a complex structure of subwavelength sized components with an “effective medium” with uni-
+%% form properties. It is a fundamentally important notion which can be traced back to the earliest days of electro-
+%% magnetic theory, to the Lorentz-Lorenz and Maxwell-Garnet effective medium models [1–3]
+%			[1] J. C. M. Garnett, Phil Trans. R. Soc. A 203, 385 (1904).
+%			[2] D. E. Aspnes, Thin Solid Films 89, 249 (1982).
+%			[3] W. Cai and V. Shalaev, Optical Metamaterials: Fundamentals and Applications (Springer, New York, 2010).
+
+%% Many MMs do not bring negative refraction, other (composites) do, but not by means of resonances: 
+%% The tunable negative permittivity and negative permeability of percolative Fe/Al2O3 composites in radio frequency range with
+%% Negative index may arise from resonances
+
+%}}}
+
+%% finish this? or leave this out?
 %%      \section{Materials available for metamaterial construction}
 %%      \subsection{General notes}
 %%       complete it in the rest of the document!!
@@ -1198,16 +1264,6 @@ PK: "The word “metamaterial” (MM) appeared first in the paper by Smith et al
 %%      \subsection{Tunable and switchable materials}
 %%      \subsection{Specifics of the terahertz range}
 
-
-
-%Introduction
-	%What is metamaterial
-	%Motivation for MM
-	%Motivation for THz range
-%Fundamentals
-%Dielectric spectra
-%eps,mu -> N,Z -> reflectivity
-%K-K relations
 %putting two resonances near to each other annihilates their “wings”
 %→ hard to make a broadband-operating passive MM
 %Metal eps spectra
@@ -1218,6 +1274,11 @@ PK: "The word “metamaterial” (MM) appeared first in the paper by Smith et al
 %reflection on metal surface (PEC) and on PMC
 %surface plasmons, standing/propagating
 %non-lossy and lossy metal (-> quasi-bound states)
+%Capacitive, inductive, resistive coupling?
+%a “fast” and a “slow” resonance superposed?
+%Two oscillators with nearly the same frequency:
+%electric+electric or magnetic+magnetic → strong coupling, leads to twice curled curve in polar plot
+%electric+magnetic → weak or no coupling (magnetic dipole: H field even, Efield odd; electric dipole: H field odd, E field even → may be regarded as zero inner product of the field functions)
 %interpreting resonance (and Fano-resonance) curves
 	%wave in free space → s12 ampli constant, phase constantly growing; (s11 zero)
 	%→  in polar plot: a clockwise rotating unit vector
@@ -1233,11 +1294,7 @@ PK: "The word “metamaterial” (MM) appeared first in the paper by Smith et al
 	%if fres1 < fres2 → …
 	%find out the difference between:
 	%two coupled broad resonances with interaction inbetween?
-%Capacitive, inductive, resistive coupling?
-%a “fast” and a “slow” resonance superposed?
-%Two oscillators with nearly the same frequency:
-%electric+electric or magnetic+magnetic → strong coupling, leads to twice curled curve in polar plot
-%electric+magnetic → weak or no coupling (magnetic dipole: H field even, Efield odd; electric dipole: H field odd, E field even → may be regarded as zero inner product of the field functions)
+
 %Scaling and non-scaling properties [Zhou PRL 2005]
 %(Mode curve anticrossing)
 %Babinet principle
